2001-01-20  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Add a third argument to AC_DEFINE.
	* lcmessage.m4 (AM_LC_MESSAGES): Likewise.

2001-01-15  Bruno Haible  <haible@clisp.cons.org>

	* iconv.m4 (AM_ICONV): Also check whether the iconv declaration
	has const.

2001-01-07  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Remove third argument. Don't call
	AC_LINK_FILES. Now done through simple file copy in intl/Makefile.in.
	(AM_GNU_GETTEXT): Remove GT_NO and GT_YES macros.

2001-01-07  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_GNU_GETTEXT): Assume <locale.h> exists.
	* setlocale.m4 (gt_SETLOCALE): Likewise.

2001-01-06  Bruno Haible  <haible@clisp.cons.org>

	Remove catgets fallback code.
	- It does not handle message clash prevention through domains and
	  dgettext().
	- It does not handle message catalog inheritance and the LANGUAGE
	  environment variable.
	- It does not handle locale aliases.
	- It does not handle automatic charset conversion.
	- It does not handle plural form handling and ngettext().
	- It uses a slow string to integer conversion.
	- It is sensitive against installation problems.
	* gettext.m4 (AM_WITH_NLS): Don't look for catgets any more. Don't
	define INSTOBJEXT. Don't create intl/po2msg.sed and intl/po2tbl.sed.

2001-01-06  Bruno Haible  <haible@clisp.cons.org>

	* setlocale.m4: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2001-01-06  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Look for GNU gettext in libc and libintl,
	ignoring Solaris X/Open gettext. Rename cache variables.

2000-12-30  Bruno Haible  <haible@clisp.cons.org>

	* ulonglong.m4: New file, from fileutils-4.0.32.
	* inttypes_h.m4: Likewise.
	* uintmax_t.m4: Likewise.
	* Makefile.am (EXTRA_DIST): Add them.

2000-09-14  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Make the tests for gettext in libc and